--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.12.0-rc1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-tools -->
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-tools</artifactId>
+            <version>1.9.12</version>
+        </dependency>
+
 
 
     </dependencies>
