Saving images implemented (with atlas creation for modules)

--- a/properties.properties
+++ b/properties.properties
@@ -1,10 +1,13 @@
-modules_folder=D:\\test\\skills\\
-skills_folder=D:\\test\\skills\\
-items_folder=D:\\test\\skills\\
-monsters_folder=D:\\test\\skills\\
+#
+#Mon Jan 25 19:48:41 MSK 2021
+load_image_folder=C\:\\Users\\Никита\\Desktop\\Свои проекты\\RPG-DRINK\\items
+skills_folder=D\:\\test\\skills\\
+items_folder=D\:\\test\\skills\\
 temp_folder=temp\\
+autosave_modules=true
 temp_images_folder=temp\\images\\
 temp_packed_images_folder=temp\\packed_images\\
-autosave_modules=true
-auto_load_modules=true
 ask_auto_load_modules=true
+monsters_folder=D\:\\test\\skills\\
+modules_folder=D\:\\test\\skills\\
+auto_load_modules=true
